--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SCHOOL WEBSITE</title>
-    <meta name="description" content="Lovable Generated Project">
+    <title>godreigns-school-portal</title>
+    <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="godreigns-school-portal" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/fOPkC7Yar8eW685v6LxXoeKdywX2/social-images/social-1758339454877-logo 2.jpeg">
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/fOPkC7Yar8eW685v6LxXoeKdywX2/social-images/social-1758339454877-logo 2.jpeg">
-    <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/fOPkC7Yar8eW685v6LxXoeKdywX2/uploads/1758339392732-logo 2.jpeg">
-</head>
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
 
   <body>
     <div id="root"></div>
